# git

./: .travis-gh-page.sh  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
clap/: enum.AppSettings.html  struct.App.html
git/: enum.GitError.html  index.html  sidebar-items.js  type.Result.html
git/error/: GitError.t.html  enum.GitError.html  type.Result.html
git/fs/: GitFS.t.html  PackRef.t.html  index.html  sidebar-items.js  struct.GitFS.html  struct.PackRef.html
git/object/: CommitRef.t.html  TreeEnt.t.html  enum.Obj.html  enum.Permission.html  enum.TreeEnt.html  index.html  sidebar-items.js  struct.Blob.html  struct.BlobRef.html  struct.Commit.html  struct.CommitRef.html  struct.Date.html  struct.Encoding.html  (+8 more)
nom/: enum.CompareResult.html  enum.ConsumerState.html  enum.Endianness.html  enum.ErrorKind.html  enum.FileProducerState.html  enum.IError.html  enum.IResult.html  enum.Input.html  enum.Move.html  enum.Needed.html  fn.alpha.html  fn.alphanumeric.html  fn.anychar.html  fn.be_f32.html  fn.be_f64.html  fn.be_i16.html  fn.be_i32.html  fn.be_i64.html  fn.be_i8.html  fn.be_u16.html  fn.be_u32.html  fn.be_u64.html  fn.be_u8.html  fn.begin.html  fn.code_from_offset.html  fn.crlf.html  fn.digit.html  fn.eol.html  fn.error_to_u32.html  fn.hex_digit.html  fn.hex_u32.html  fn.is_alphabetic.html  fn.is_alphanumeric.html  fn.is_digit.html  fn.is_hex_digit.html  fn.is_oct_digit.html  fn.is_space.html  fn.le_f32.html  fn.le_f64.html  fn.le_i16.html  (+151 more)
src/: error.rs  fs.rs  hash.rs  lib.rs  object.rs  objectable.rs  refs.rs  repo.rs
test_ref/: init.sh
(+236 files in other folders)
