[package]
name = "git"
version = "0.1.0"
authors = ["Nicolas DI PRIMA <nicolas@di-prima.fr>"]

[dependencies]
rust-crypto = "*"
flate2 = "0.2.14"
time="*"
chrono="*"
nom="~2"
rustc-serialize="*"

[[bin]]
name="git"
doc=false

[dependencies.clap]
version = "~2.19.0"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]
